# VakilSahab-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WorkFlow.md  main.py  pyproject.toml
api/: mcp_server.py
api/MCP_client/routes/: chat_agent_route.py
api/VakilSahab_feature/routes/: ask_vakil_sahab_route.py  data_ingestion_route.py  health_route.py  home_route.py  legal_case_prediction_route.py  legal_web_search_route.py
api/VakilSahab_feature/services/: chat_service.py  ingest_service.py  search_service.py
api/legal_case_pred-main/: README.md  main.py  requirements.txt
api/pages/routes/: home_page_route.py
api/pages/templates/: index.html
api/utils/: main_utils.py
constants/: __init__.py
data/models/: legal_case_model.pkl  scaler.pkl
db/: chroma.sqlite3
exception/: __init__.py
logger/: __init__.py
src/MCP_Client/contants/: __init__.py
src/MCP_Client/graphs/: builder.py
src/MCP_Client/llm/: llm_loader.py
src/MCP_Client/models/: state_mode.py
src/MCP_Client/nodes/: chat_llm_node.py  tool_call_node.py
src/MCP_Client/pipelines/: mcp_agent_pipeline.py
src/MCP_Client/tests/: test_agent.py  test_mcp.py
src/MCP_Client/tools/: mcp_as_a_tool.py
src/VakilSahab_feature/components/: Data_ingestion.py  Google_results.py  RAG_ingestion.py
src/VakilSahab_feature/configurations/: download_data_config.yaml
src/VakilSahab_feature/constants/: __init__.py
src/tools/: taivily_search_tool.py
static/css/: style.css
static/js/: main.js
tests/: debug_mcp_stdio.py  test_mcp_server.py
utils/: asyncHandler.py  main_utils.py
(+20 files in other folders)
